全屏显示修改初版

--- a/Industrial_Logs/templates/Industrial_Logs/BME280.html
+++ b/Industrial_Logs/templates/Industrial_Logs/BME280.html
@@ -4,7 +4,7 @@
 {% endblock header %}
 {% block content %}
     <script src="{{STATIC_URL}}dist/js/bme280.js"></script>
-    <div id="back" class="main" style="height:90%;">
+    <div id="back" class="main" >
         <h1 style="width:85%; color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;">时间-压力/温度/湿度/PM(同比）</h1>
         <div style=" border:2px solid red; width:80%; height: 95%;margin:0px 40px" id=""  class="chart-container">
             <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px" id="box1"  class="chart-container" name="box">
