--- a/Industrial_Logs/templates/Industrial_Logs/Sensor_Proportion.html
+++ b/Industrial_Logs/templates/Industrial_Logs/Sensor_Proportion.html
@@ -45,46 +45,78 @@ h1 {
 }
 
 </style>
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=d9f80d3c19df612f7f88fb984f37b68a"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=uYQuzkZDf3GKEiiRcsudnAY5F8FZqlEo"></script>
+    <script type="text/javascript" src="http://developer.baidu.com/map/custom/stylelist.js"></script>
     <script src="{{STATIC_URL}}dist/js/OtherCharts.js"></script>
     <div id="back" class="main" >
         <h1>传感器信息</h1>
-        <!-- 调用api -->
-        <!--  <iframe style="border:2px solid #666;width:80%;height: 80%;float:left" id="sensor_proportion_1"  class="chart-container" src="https://maplab.amap.com/share/mapv/65c8e17174910a178e181b8a56b788d0"></iframe>
-         -->
-        <div style="border:2px solid #666;width:80%;height: 80%;float:left" id="sensor_proportion_2"  class="chart-container"></div>
+{#        <div style="width:700px;height:550px;border:#ccc solid 1px;font-size:12px" id="map"></div>#}
+        <div style="border:2px solid #666;width:80%;height: 80%;float:left" id="map"  class="chart-container"></div>
     </div>
-    <script>
-var elem = document.getElementById("back");
+<script type="text/javascript">
+    //创建和初始化地图函数：
+    function initMap(){
+      createMap();//创建地图
+      setMapEvent();//设置地图事件
+      addMapControl();//向地图添加控件
+      addMapOverlay();//向地图添加覆盖物
+      changeMapStyle();//设置地图样式（底色）
+    }
+    function createMap(){
+      map = new BMap.Map("map");
+      map.centerAndZoom(new BMap.Point(112.426229,34.619245),16	);
+    }
+    function setMapEvent(){
+      map.enableScrollWheelZoom();
+      map.enableKeyboard();
+      map.enableDragging();
+      map.enableDoubleClickZoom()
+    }
+    function addClickHandler(target,window){
+      target.addEventListener("click",function(){
+        target.openInfoWindow(window);
+      });
+    }
+    function addMapOverlay(){
+      var markers = [
+        {content:"洛阳理工学院实验A楼113",title:"洛阳理工学院",imageOffset: {width:0,height:-21},position:{lat:34.619245,lng:112.426229}}
+      ];
+      for(var index = 0; index < markers.length; index++ ){
+        var point = new BMap.Point(markers[index].position.lng,markers[index].position.lat);
+        var marker = new BMap.Marker(point,{icon:new BMap.Icon("http://api.map.baidu.com/lbsapi/createmap/images/icon.png",new BMap.Size(22,25),{
+          imageOffset: new BMap.Size(markers[index].imageOffset.width,markers[index].imageOffset.height)
+        })});
+        var label = new BMap.Label(markers[index].title,{offset: new BMap.Size(25,5)});
+        var opts = {
+          width: 200,
+          title: markers[index].title,
+          enableMessage: false
+        };
+        var infoWindow = new BMap.InfoWindow(markers[index].content,opts);
+        marker.setLabel(label);
+        addClickHandler(marker,infoWindow);
+        map.addOverlay(marker);
+      };
+    }
+    //向地图添加控件
+    function addMapControl(){
+      var scaleControl = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
+      scaleControl.setUnit(BMAP_UNIT_IMPERIAL);
+      map.addControl(scaleControl);
+      var navControl = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});
+      map.addControl(navControl);
+      var overviewControl = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:true});
+      map.addControl(overviewControl);
+    }
 
-function openFullscreen() {
-  if (elem.requestFullscreen) {
-     elem.requestFullscreen();
-  } else if (elem.mozRequestFullScreen) {    /* Firefox */
-     elem.mozRequestFullScreen();
-  } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari & Opera */
-     elem.webkitRequestFullscreen();
-  } else if (elem.msRequestFullscreen) {     /* IE/Edge */
-     elem.msRequestFullscreen();
-  }
+function changeMapStyle(style){
+    var mapStyle ={
+        features: ["road","building","water","land"],//隐藏地图上的"poi",
+        style : "midnight",
+    };
+    map.setMapStyle(mapStyle);
 }
-
-function closeFullscreen() {
-  if (document.exitFullscreen) {
-     document.exitFullscreen();
-  } else if (document.mozCancelFullScreen) {  /* Firefox */
-     document.mozCancelFullScreen();
-  } else if (document.webkitExitFullscreen) { /* Chrome, Safari and Opera */
-     document.webkitExitFullscreen();
-  } else if (document.msExitFullscreen) {     /* IE/Edge */
-     document.msExitFullscreen();
-  }
-}
-</script>
-    <script>
-
-    $(function () {
-        map();
-    })
-    </script>
+    var map;
+      initMap();
+  </script>
 {% endblock content %}
