--- a/Industrial_Logs/templates/Industrial_Logs/real_TemAndHum.html
+++ b/Industrial_Logs/templates/Industrial_Logs/real_TemAndHum.html
@@ -4,7 +4,49 @@
 {% endblock header %}
 {% block content %}
     <script src="{{ STATIC_URL }}dist/js/OtherCharts.js"></script>
-    <div id="back" class="main" style="height:90%;">
+    <style>
+#back {
+    height: 91%;
+    width: 84%;
+}
+h1 {
+    color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;
+}
+
+:-moz-full-screen #back{
+    {#background-color: pink;#}
+    height:100%;
+    width: 100%;
+}
+:-webkit-full-screen #back{
+    {#background-color: pink;#}
+    height:100%;
+    width: 100%;
+}
+:fullscreen #back{
+    {#background-color: pink;#}
+    height:100%;
+    width: 100%;
+
+}
+
+:-moz-full-screen h1{
+    {#background-color: pink;#}
+    display: none;
+}
+:-webkit-full-screen h1{
+    {#background-color: pink;#}
+    display: none;
+}
+:fullscreen h1{
+    {#background-color: pink;#}
+    display: none;
+
+
+}
+
+</style>
+    <div id="back" class="main" >
         <h1 style="color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;">
             设备实时温湿度实时数据</h1>
         <div style="border:2px solid #666;width:100%;height: 80%;float:left" id="realTemAndHum_1"
