--- a/Industrial_Logs/templates/Industrial_Logs/real_TemAndHum.html
+++ b/Industrial_Logs/templates/Industrial_Logs/real_TemAndHum.html
@@ -8,10 +8,15 @@
         <h1 style="color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;">
             设备实时温湿度实时数据</h1>
         <div style="border:2px solid #666;width:100%;height: 80%;float:left" id="realTemAndHum_1"
-             class="chart-container"></div>
+             class="chart-container">
+
+        </div>
 
     </div>
+
     <script>
+
+
 
     {#实时温度，湿度查询#}
         {#console.log({{ dic }})#}
