--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -177,7 +177,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="{% url 'Industrial_Logs:Sensor_inf' %}" class="nav-link ">
+                                    <a href="{% url 'Industrial_Logs:hadoop_info' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
                                         <i class="fa fa-file"></i>
                                         <p>原始数据容量</p>
