去除红色框线，样式微调，all echarts 画线颜色更改为更明亮的红色(#ff0002)

--- a/Industrial_Logs/templates/Industrial_Logs/BME280.html
+++ b/Industrial_Logs/templates/Industrial_Logs/BME280.html
@@ -8,24 +8,24 @@
 
     <div id="back" class="main">
         <h1>时间-压力/温度/湿度/PM(同比）</h1>
-        <div style=" border:2px solid red;" id="all"  class="chart-container">
-            <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px" id="box1"  class="chart-container" name="box">
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id="HalfYearP1"  class="chart-container"></div>
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id="HalfYearP2"  class="chart-container"></div>
+        <div id="all"  class="chart-container">
+            <div style=" float:left;width:70%; height: 100%;margin:0px" id="box1"  class="chart-container" name="box">
+                <div style="width:100%; height: 50%;float:left;margin-bottom: 3%;" id="HalfYearP1"  class="chart-container"></div>
+                <div style="width:100%; height: 50%;float:left;" id="HalfYearP2"  class="chart-container"></div>
             </div>
-            <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px;display: none" id="box2"  class="chart-container" name="box">
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id="HalfYearT1"  class="chart-container"></div>
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id="HalfYearT2"  class="chart-container"></div>
+            <div style=" float:left; width:70%; height: 100%;margin:0px;display: none" id="box2"  class="chart-container" name="box">
+                <div style="margin-bottom: 3%;width:100%; height: 50%;float:left;" id="HalfYearT1"  class="chart-container"></div>
+                <div style="margin-bottom: 3%;width:100%; height: 50%;float:left" id="HalfYearT2"  class="chart-container"></div>
             </div>
-            <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px; display: none" id="box3"  class="chart-container" name="box">
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id="HalfYearH1"  class="chart-container"></div>
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id="HalfYearH2"  class="chart-container"></div>
+            <div style=" float:left; width:70%; height: 100%;margin:0px; display: none" id="box3"  class="chart-container" name="box">
+                <div style="margin-bottom: 3%;width:100%; height: 50%;float:left;" id="HalfYearH1"  class="chart-container"></div>
+                <div style="margin-bottom: 3%;width:100%; height: 50%;float:left" id="HalfYearH2"  class="chart-container"></div>
             </div>
-            <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px; display: none" id="box4"  class="chart-container" name="box">
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id="HalfYearPM1"  class="chart-container"></div>
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id="HalfYearPM2"  class="chart-container"></div>
+            <div style=" float:left; width:70%; height: 100%;margin:0px; display: none" id="box4"  class="chart-container" name="box">
+                <div style="margin-bottom: 3%;width:100%; height: 50%;float:left;" id="HalfYearPM1"  class="chart-container"></div>
+                <div style="margin-bottom: 3%;width:100%; height: 50%;float:left" id="HalfYearPM2"  class="chart-container"></div>
             </div>
-            <div style=" float:right;border:2px solid red;width:29%; height: 100%;margin:0px;" id=""  class="chart-container">
+            <div style=" float:right; width:29%; height: 100%;margin:0px;" id=""  class="chart-container">
 {#                <a href="#" style="border:2px solid #666;width:100%;height: 23%;float:left;display:inline-block" onclick="show(1)">#}
                 <div style="border:2px solid #666;width:100%;height: 25%;" id="chart_BME280_0"  class="chart-container" onclick="show(1)">时间-压力</div>
                 <div style="border:2px solid #666;width:100%;height: 25%;" id="chart_BME280_1"  class="chart-container" onclick="show(2)">时间-温度</div>
