--- a/Industrial_Logs/templates/Industrial_Logs/P_TH.html
+++ b/Industrial_Logs/templates/Industrial_Logs/P_TH.html
@@ -6,8 +6,8 @@
 
     <div id="back" class="main">
         <h1 style="width:85%; color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;margin-left: auto;margin-right: auto;">时间-压力/温度/湿度/PM(环比）</h1>
-        <div style=" border:2px solid red; width:80%; height: 85%;margin-left: auto;margin-right: auto;" id="all"  class="chart-container">
-            <div style=" border:2px solid red; height: 65%;margin:0px" id="box1"  class="chart-container" name="box">春
+        <div style="width:80%; height: 85%;margin-left: auto;margin-right: auto;" id="all"  class="chart-container">
+            <div style="height: 65%;margin:0px" id="box1"  class="chart-container" name="box">春
                 <button style="float:right; margin:10px 30px 0px 15px; color:white;display:inline-block;width:50px; height:30px; background: #0e5b44;border-radius: 10px;" onclick="showC(0)">温度</button>
                 <button style="float:right;  margin:10px 5px 0px 15px; color:white; display:inline-block;width:50px; height:30px; background: #0e5b44;border-radius: 10px" onclick="showC(1)">湿度</button>
                 <button style="float:right; margin:10px 5px 0px 15px; color:white;display:inline-block;width:50px; height:30px; background: #0e5b44;border-radius: 10px;" onclick="showC(2)">压力</button>
@@ -17,7 +17,7 @@
                 <div style="margin: 30px 0px 0px 0px; border:2px solid #666; width:99%;height: 85%;display: none" id="C_2"  class="chart-container" name="boxC">春/压力</div>
                 <div style="margin: 30px 0px 0px 0px; border:2px solid #666; width:99%;height: 85%;display: none" id="C_3"  class="chart-container" name="boxC">春/PM</div>
             </div>
-            <div style=" border:2px solid red; height: 65%;margin:0px; display: none" id="box2"  class="chart-container" name="box">夏
+            <div style=" height: 65%;margin:0px; display: none" id="box2"  class="chart-container" name="box">夏
                 <button style="float:right; margin:10px 30px 0px 15px; color:white;display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px;" onclick="showX(0)">温度</button>
                 <button style="float:right;  margin:10px 5px 0px 15px; color:white; display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px" onclick="showX(1)">湿度</button>
                 <button style="float:right; margin:10px 5px 0px 15px; color:white;display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px;" onclick="showX(2)">压力</button>
@@ -27,7 +27,7 @@
                 <div style="margin: 30px 0px 0px 0px; border:2px solid #666; width:99%;height: 85%;display: none" id="X_2"  class="chart-container" name="boxX" onclick="show(1)">夏/压力</div>
                 <div style="margin: 30px 0px 0px 0px; border:2px solid #666; width:99%;height: 85%;display: none" id="X_3"  class="chart-container" name="boxX" onclick="show(1)">夏/PM</div>
             </div>
-            <div style=" border:2px solid red; height: 65%;margin:0px; display: none" id="box3"  class="chart-container" name="box">秋
+            <div style="height: 65%;margin:0px; display: none" id="box3"  class="chart-container" name="box">秋
                 <button style="float:right; margin:10px 30px 0px 15px; color:white;display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px;" onclick="showQ(0)">温度</button>
                 <button style="float:right;  margin:10px 5px 0px 15px; color:white; display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px" onclick="showQ(1)">湿度</button>
                 <button style="float:right; margin:10px 5px 0px 15px; color:white;display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px;" onclick="showQ(2)">压力</button>
@@ -37,7 +37,7 @@
                 <div style="margin: 30px 0px 0px 0px; border:2px solid #666; width:99%;height: 85%;display: none" id="Q_2"  class="chart-container" name="boxQ" onclick="show(1)">秋/压力</div>
                 <div style="margin: 30px 0px 0px 0px; border:2px solid #666; width:99%;height: 85%;display: none" id="Q_3"  class="chart-container" name="boxQ" onclick="show(1)">秋/PM</div>
             </div>
-            <div style=" border:2px solid red; height: 65%;margin:0px; display: none" id="box4"  class="chart-container" name="box">冬
+            <div style="height: 65%;margin:0px; display: none" id="box4"  class="chart-container" name="box">冬
                 <button style="float:right; margin:10px 30px 0px 15px; color:white;display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px;" onclick="showD(0)">温度</button>
                 <button style="float:right;  margin:10px 5px 0px 15px; color:white; display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px" onclick="showD(1)">湿度</button>
                 <button style="float:right; margin:10px 5px 0px 15px; color:white;display:inline-block; width:50px; height:30px; background: #0e5b44;border-radius: 10px;" onclick="showD(2)">压力</button>
@@ -48,7 +48,7 @@
                 <div style="margin: 30px 0px 0px 0px; border:2px solid #666; width:99%;height: 85%;display: none" id="D_3"  class="chart-container" name="boxD" onclick="show(1)">冬/PM</div>
             </div>
 
-            <div style=" border:2px solid red; height: 35%;margin:0px" id=""  class="chart-container">
+            <div style="height: 35%;margin:0px" id=""  class="chart-container">
                 <div style="border:2px solid #666;width:33%; height: 100%;float:left;margin:0px;" id="X"  class="chart-container" onclick="show(2)">夏季</div>
                 <div style="border:2px solid #666;width:33%; height: 100%;float:left;margin:0px;" id="Q"  class="chart-container" onclick="show(3)">秋季</div>
                 <div style="border:2px solid #666;width:32%; height: 100%;float:left;margin:0px;" id="D"  class="chart-container" onclick="show(4)">冬季</div>
