--- a/Industrial_Logs/templates/Industrial_Logs/hadoop_info.html
+++ b/Industrial_Logs/templates/Industrial_Logs/hadoop_info.html
@@ -49,15 +49,15 @@ hadoop 信息
 
 
 
-         <div style=" border:2px solid red; width:80%; height: 70%;margin:0px 40px" id="main_box"  class="chart-container">
-            <div style=" float:left;border:2px solid red;width:30%; height: 100%;margin:0px" id="box1"  class="chart-container" name="box">
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id="left_up"  class="chart-container">容量</div>
-                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id="left_down"  class="chart-container">dfs</div>
+         <div style=" width:80%; height: 70%;margin:0px 40px" id="main_box"  class="chart-container">
+            <div style=" float:left;width:30%; height: 100%;margin:0px" id="box1"  class="chart-container" name="box">
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id="left_up"  class="chart-container">dfs（左上）</div>
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id="left_down"  class="chart-container">容量（左下）</div>
             </div>
-             <div style=" float:left;border:2px solid red;width:39%; height: 100%;margin:0px" id="box2"  class="chart-container" name="box">
-                <div style="border:2px solid #666;width:100%; height: 100%;float:left;" id="center"  class="chart-container">集群总文件大小</div>
+             <div style=" float:left;width:40%; height: 100%;margin:0px" id="box2"  class="chart-container" name="box">
+                <div style="border:2px solid #666;width:100%; height: 101%;float:left;" id="center"  class="chart-container">集群总文件大小</div>
             </div>
-            <div style=" float:right;border:2px solid red;width:30%; height: 100%;margin:0px;" id="box3"  class="chart-container">
+            <div style=" float:right;width:30%; height: 100%;margin:0px;" id="box3"  class="chart-container">
                 <div style="border:2px solid #666;width:100%;height: 50%;" id="right_up"  class="chart-container" >块
                 </div>
                 <div style="border:2px solid #666;width:100%;height: 50%;" id="right_down"  class="chart-container" >多少个数据块</div>
